--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta
           name="viewport"
           content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -25,7 +24,14 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running `npm run build`.
   -->
-  <title>KeyGenes application</title>
+  <meta name="title" content="KeyGenes">
+  <meta name="description" content="KeyGenes tool execution, expression browser and algorithm explanation ">
+  <meta name="keywords" content="KeyGenes, KeyGenes tool, gene browser, expression browser, tissue browser, KeyGenes algorithm, tissue predictions">
+  <meta name="robots" content="index, follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="Dylan Hoogduin">
+
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
